try to insert data

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
          <div class=" signup-title title">
              Signup
          </div>
-         <form action="signup" method="post" name="name" onsubmit="return check()">
+         <form action="/signup" method="post" name="name" onsubmit="return check()">
          <div class="input-boxs">
              <div class=" signup-name input-box">
                   <input type="text"  placeholder="First Name" name="firstnm">
