try to insert data and nevigate login page

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="css/style.css">
-<script src="message.js"></script>
+<script src="javascrip/message.js"></script>
 </head>
 <body id="signup-body">
     <div class="signup-form">
@@ -10,7 +10,7 @@
          <div class=" signup-title title">
              Signup
          </div>
-         <form action="/signup" method="post" name="name" onsubmit="return check()">
+         <form action="/signup" method="post" name="s" onsubmit="return check()">
          <div class="input-boxs">
              <div class=" signup-name input-box">
                   <input type="text"  placeholder="First Name" name="firstnm">
